GSN_PVT_CSharp/GTN_Crd_Domo_CSharp/LookAheadEx.cs


		public enum OptimizeMethod
        {
            NO_OPT=0,
            OPT_BLENDING=1, 
            OPT_CIRCLEFITTING=2,
            OPT_CUBICSPLINE=3,
            OPT_BSPLINE=4
        };
		
		public enum ErrorID
        {
            INIT_ERROR=1,		//没有进行参数初始化
			PASSWORD_ERROR=2,		//密码错误，请在固高运动控制平台上运行
			INDATA_ERROR=3,		//输入数据错误（检查圆弧数据是否正确）
			PRE_PROCESS_ERROR=4,	//
			TOOL_RADIUS_COMPENSATE_ERROR_INOUT=5,		//刀具半径补偿错误：进入/结束刀补处不能是圆弧
			TOOL_RADIUS_COMPENSATE_ERROR_NOCROSS=6,	//刀具半径补偿错误：数据不合理，无法计算交点
			USERDATA_ERROR=7,
		};
		
		//轨迹优化参数结构体
		public struct TOptimizeParamUser 
		{
			public OptimizeState usePathOptimize;	//是否使用路径优化：OPT_OFF:不使用	OPT_ON:使用
		
			public float tolerance;				//公差(suggest: rough:0.1, pre-finish:0.05, finish:0.01)
		
			public OptimizeMethod optimizeMethod;	//选择曲线优化方式
		
			public OptimizeState keepLargeArc;		//是否保留大圆弧：OPT_OFF：不保留， OPT_ON：保留
		
			public float blendingMinError;			//blending的最小设定误差
		
			public float blendingMaxAngle;			//blending的最大角度限制（即当线段向量角度大于该角度时，不做blending，单位：度）
		
		};
		
		public struct TErrorInfo 
		{
			public ErrorID errorID;		//错误号(INIT_ERROR:未初始化参数；PRE_PROCESS_ERROR:预处理模块错误；
									//TOOL_RADIUS_COMPENSATE_ERROR:刀具半径补偿错误；)
			public int errorRowNum;		//错误行号
		};
		
		public struct TPreStartPos 
		{
		    public double Pos1;
            public double Pos2;
            public double Pos3;
            public double Pos4;
            public double Pos5;
            public double Pos6;
            public double Pos7;
            public double Pos8;
		};
		
			public struct TBufIoDelayData 
			{
                public ushort doType;
                public ushort doMask;
                public ushort doValue;
                public ushort delayTime;
                public short fifo;
			};

			public struct TBufDoBitPulseData
			{
                public short doType;
                public short doIndex;
                public ushort highLevelTime;
                public ushort lowLevelTime;
                public long pulseNum;
                public short firstLevel;
                public short fifo;
			};

			public struct TBufDaData
			{
                public short channel;
                public short daValue;
                public short fifo;
			};

			public struct TBufLaserData
			{
                public short channel;
                public short fifo;
                public short source;
                public double laserPower;
                public double ratio;
                public double minPower;
                public double maxPower;
                public short tableId;
			};

			public struct TBufGearData
			{
                public short axis;
                public double deltaPos;
                public short fifo;
                public short smoothFlag;
                public short accPercent;
                public short decPercent;
			};

			public struct TBufMoveData
			{
                public short axis;
                public double pos;
                public double vel;
                public short modal;
                public short fifo;
			};

			public struct TBufSegNumData
			{
                public long segNum;
                public short fifo;
			};
		
        //Look ahead Ex
        [DllImport("gts.dll")]
        public static extern short  GT_SetupLookAheadCrd(short crd,EMachineMode machineMode);
				[DllImport("gts.dll")]
        public static extern short  GT_SetFollowAxisParaEx(short crd, ref short pAxisLimitMode, ref double pVmax, ref double pAmax, ref double pDVmax);
        [DllImport("gts.dll")]
        public static extern short  GT_SetVelDefineModeLa(short crd,EVelSettingDef velDefMode);
        [DllImport("gts.dll")]
        public static extern short  GT_SetAxisLimitModeLa(short crd,ref int pAxisLimitMode);
        [DllImport("gts.dll")]
        public static extern short  GT_SetWorkLimitModeLa(short crd,EWorkLimitMode workLimitMode);
        [DllImport("gts.dll")]
        public static extern short  GT_SetAxisVelValidModeLa(short crd,int velValidAxis);
        [DllImport("gts.dll")]
        public static extern short  GT_SetVelSmoothMode(int crd,int smoothMode);
        [DllImport("gts.dll")]
        public static extern short  GT_SetArcAllowErrorLa(short crd, double error);
        [DllImport("gts.dll")]
        public static extern short  GT_InitLookAheadEx(short crd,ref TLookAheadParameter pLookAheadPara,short fifo, short motionMode,ref TPreStartPos pPreStartPos);
        [DllImport("gts.dll")]
        public static extern short  GT_PrintLACmdLa(short crd,int printFlag, int clearFile);

        [DllImport("gts.dll")]
        public static extern short  GT_LnXYEx(short crd,double x,double y,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_LnXYG0Ex(short crd,double x,double y,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_LnXYZEx(short crd,double x,double y,double z,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_LnXYZG0Ex(short crd,double x,double y,double z,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_LnXYZAEx(short crd,double x,double y,double z,double a,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_LnXYZAG0Ex(short crd,double x,double y,double z,double a,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_LnXYZACEx(short crd,ref double pPos,short posMask,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_LnXYZACG0Ex(short crd,ref double pPos,short posMask,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_LnXYZACUVWEx(short crd,ref double pPos,short posMask,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_LnXYZACUVWG0Ex(short crd,ref double pPos,short posMask,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcXYREx(short crd,double x,double y,double radius,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcYZREx(short crd,double y,double z,double radius,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcZXREx(short crd,double z,double x,double radius,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcXYCEx(short crd,double x,double y,double xCenter,double yCenter,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcYZCEx(short crd,double y,double z,double yCenter,double zCenter,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcZXCEx(short crd,double z,double x,double zCenter,double xCenter,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_ArcXYZEx(short crd,double x,double y,double z,double interX,double interY,double interZ,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_HelixXYRZEx(short crd,double x,double y,double z,double radius,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_HelixXYCZEx(short crd,double x,double y,double z,double xCenter,double yCenter,short circleDir,double synVel,double synAcc,int segNum,short override2,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_BufDelayEx(short crd,ushort delayTime,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_BufGearEx(short crd,short gearAxis,double deltaPos,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_BufGearPercentEx(short crd,short gearAxis,double deltaPos,short accPercent,short decPercent,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_BufMoveEx(short crd,short moveAxis,double pos,double vel,double acc,short modal,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_BufIOEx(short crd,ushort doType,ushort doMask,ushort doValue,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_BufDAEx(short crd,short chn,short daValue,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_SetUserSegNumEx(short crd,int segNum,short fifo);

        //Add By lin.ga 20150330
        [DllImport("gts.dll")]
        public static extern short  GT_BufLaserOnEx(short crd,short fifo,short channel);
        [DllImport("gts.dll")]
        public static extern short  GT_BufLaserOffEx(short crd,short fifo,short channel);
        [DllImport("gts.dll")]
        public static extern short  GT_BufLaserPrfCmdEx(short crd,double laserPower,short fifo,short channel);
        [DllImport("gts.dll")]
        public static extern short  GT_BufLaserFollowRatioEx(short crd,double ratio,double minPower,double maxPower,short fifo,short channel);
        [DllImport("gts.dll")]
        public static extern short  GT_BufLaserFollowModeEx(short crd,short source ,short fifo,short channel);
        [DllImport("gts.dll")]
        public static extern short  GT_BufLaserFollowSplineEx(short crd,short tableId,double minPower,double maxPower,short fifo,short channel);
        [DllImport("gts.dll")]
        public static extern short  GT_BufLaserFollowOffEx(short crd,short fifo,short channel);
        [DllImport("gts.dll")]
        public static extern short  GT_BufDisableDoBitPulseEx(short crd,short doType,short doIndex,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_BufEnableDoBitPulseEx(short crd,short doType,short doIndex,ushort highLevelTime,ushort lowLevelTime,int pulseNum,short firstLevel,short fifo);
        [DllImport("gts.dll")]
        public static extern short GT_CrdDataEx(short crd, System.IntPtr pCrdData, short fifo);  //调用时传入 IntPtr.Zero GT_CrdDataEx(1, System.IntPtr.Zero, 0);
        [DllImport("gts.dll")]
        public static extern short  GT_CrdDataExEx(short crd,System.IntPtr pCrdData,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_GetLookAheadSegCountEx(short crd,out int pSegCount,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_GetMotionTimeEx(short crd,out double pTime,short fifo);

        /////////////////////////////////////////////////////////////////////////////////////////
        /////////////////lin.ga 20150701 Add PathOpt Fuction/////////////////////////////////////
        /////////////////////////////////////////////////////////////////////////////////////////
        [DllImport("gts.dll")]
        public static extern short  GT_SetPathOptPara(short crd, ref TOptimizeParamUser optPrm,short fifo);
        [DllImport("gts.dll")]
        public static extern short  GT_GetPathOptErrorInfo(short crd,ref TErrorInfo errorInfo,short fifo);

